started to debug the test